# ATask_run

./: .gitignore  LICENSE  MANIFEST.in  README.md  do_asr.py  pyproject.toml  test.py  test_asr.py  test_image.py  test_ocr.py
atask_run/: aexecutor.py  amodel.py  apipe.py  atask.py  audio_split.py  chinese_itn.py  cluster_backend.py  del_str.py  feat_cluster.py  find_teacher.py  idioms.txt  infomap_cluster.py  merge_asr.py  model_desc.py  model_id.py  mute_dec.py  numpy_fbank.py  scentence_post.py  seg.py  syllables_cal.py  text_fusion.py  timeused.py  uty_postprocess.py  uty_preprocess.py  zk_zhconv.py
atask_run/backend/: amodel_impl.py  ascend_om.py  bm1688.py  ort.py  x3.py
atask_run/models/: act.py  asr_dec.py  asr_enc.py  asr_frontend.py  asr_post.py  asr_predictor.py  asr_sensevoice.py  asr_stamp.py  asr_vad.py  classtype.py  e2e_vad.py  face_score.py  facedet.py  faceori.py  facerec.py  ocr_det.py  ocr_rec.py  phone_det.py  punc_bin.py  raisehandcls.py  sv.py  t5_dec_1st.py  t5_dec_kvs.py  t5_enc.py  utils.py  v4.py  v4_preprocess.py
atask_run/models/ppocr_postprocess/: cls_postprocess.py  ct_postprocess.py  db_postprocess.py  rec_postprocess.py
config/: README
config_temp/: README
model/: README
run/cache/: README
src/: aexecutor.py  model_desc.py  model_id.py  timeused.py
src/models/: asr_dec.py  asr_post.py  asr_vad_impl.py
