[build-system]
requires = [
    "setuptools", 
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "atask_run"
version = "0.1.0"
authors = [
    {name = "sunkw", email = "sunwei@zonekey.com.cn"},
    {name = "sundy", email = "sundy@zonekey.com.cn"},
]
description = "an AI pre/infer/post pipe manager"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "onnxruntime",
    "faiss-cpu",
    "infomap",
    "jieba",
    "kaldi_native_fbank",
    "librosa",
    "opencv-python-headless",
    "psutil",
    "pynvml",
    "python-Levenshtein",
    "PyYAML",
    "scikit_learn",
    "sentencepiece",
    "setuptools",
    "soundfile",
    "tokenizers",
]

[tool.setuptools.packages.find]
where = ["."]  # 当前目录
include = ["atask_run*"]  # 只包含 atask_run
exclude = ["config", "config_temp", "wav", "model", "picture", "run"]

[project.urls]
Homepage = "https://github.com/sunkwei/ATask_run"
